--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
