--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-simple-typewriter": "^5.0.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
