--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 TOMTOM_MAPAPI_KEY = xg1ElbjvgJgdgL109oxZ6y1K1MntxtBS
-WEBSITE_URL = http://localhost:5173/
+# WEBSITE_URL = http://localhost:5173/
+WEBSITE_URL = https://ecogeek.netlify.app
